--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ a
 		<td><img src= "img/DragaoBranco.jpg"><h4><a href = "https://5e.tools/bestiary.html#adult%20white%20dragon_mm" target = "_blank">Dragão Branco Adulto</a></h4></td>
 		<td><img src= "img/DragaoVermelho.jpg"><h4><a href="https://5e.tools/bestiary.html#adult%20red%20dragon_mm " target="_blank">Dragão Vermelho Adulto</a></h4></td>
 		<td><img src= "img/DragaoNegro.jpg"><h4><a href="https://5e.tools/bestiary.html#adult%20black%20dragon_mm" target="_blank">Dragão Negro Adulto</a></h4></td>
-		<td><img src= "img/DragaoAzul.jpg"><h4><a href="https://5e.tools/bestiary.html#adult%20blue%20dragon_mm" target="_blank">Dragão Azul Adulto</a></h4></td>/h4></td>
+		<td><img src= "img/DragaoAzul.jpg" width="50%"><h4><a href="https://5e.tools/bestiary.html#adult%20blue%20dragon_mm" target="_blank">Dragão Azul Adulto</a></h4></td>/h4></td>
 		
 
 	</tr>
@@ -43,7 +43,7 @@ a
 		<td><img src = "img/DragaoVerde.jpg"><h4><a href="https://5e.tools/bestiary.html#adult%20green%20dragon_mm" target="_blank">Dragão Verde Adulto</a></h4></td>
 		<td><img src = "img/DragaoTopazio.jpg"><h4><a href="https://5e.tools/bestiary.html#adult%20topaz%20dragon_ftd" target="_blank">Dragão De Topazio Adulto</a></h4></td>
 		<td><img src = "img/DragaoSafira.jpg" width = 100%><h4><a href="https://5e.tools/bestiary.html#adult%20sapphire%20dragon_ftd" target="_blank">Dragão De Safira Adulto</a></h4></td>
-		<td><img src = "img/DragaoCrystal.jpg"><h4><a href="https://5e.tools/bestiary.html#adult%20crystal%20dragon_ftd" target="_blank">Dragão De Cristal Adulto</a></h4></td>
+		<td><img src = "img/DragaoCrystal.jpg" width="50%"><h4><a href="https://5e.tools/bestiary.html#adult%20crystal%20dragon_ftd" target="_blank">Dragão De Cristal Adulto</a></h4></td>
 
 		
 	</tr>
@@ -60,8 +60,8 @@ a
 	</tr>
 	<tr>
 		<td><img src = "img/DragaoCobre.jpg"><h4><a href="https://5e.tools/bestiary.html#adult%20copper%20dragon_mm" target="_blank">Dragão De Cobre Adulto</a></h4></td>
-		<td><img src = "img/DragaoOuro.jpg"><h4><a href="https://5e.tools/bestiary.html#adult%20gold%20dragon_mm" target="_blank">Dragão De Ouro Adulto</a></h4></td>
-		<td><img src = "img/Drake.jpg"><h4><a href="https://5e.tools/bestiary.html#ambush%20drake_hotdq" target="_blank">Drakes</a></h4></td>
+		<td><img src = "img/DragaoOuro.jpg" width="75%"><h4><a href="https://5e.tools/bestiary.html#adult%20gold%20dragon_mm" target="_blank">Dragão De Ouro Adulto</a></h4></td>
+		<td><img src = "img/Drake.jpg" width="100%"><h4><a href="https://5e.tools/bestiary.html#ambush%20drake_hotdq" target="_blank">Drakes</a></h4></td>
 		<td><img src = "img/MeioDragao.jpg"><h4><a href="https://5e.tools/bestiary.html#half-red%20dragon%20gladiator_rot" target="_blank">Half Dragon</a></h4></td>
 		<td><img src = "img/DragonBorn.jpg"><h4><a href="https://5e.tools/bestiary.html#dragonborn%20of%20bahamut_ftd" target="_blank">Dragonborn</a></h4></td>
 		
